2012-02-20  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/elf/configure.in: Delete.
	* sysdeps/sparc/sparc32/elf/configure: Delete.
	* sysdeps/sparc/sparc64/elf/configure.in: Delete.
	* sysdeps/sparc/sparc64/elf/configure: Delete.
	* sysdeps/sparc/elf/configure.in: New file.
	* sysdeps/sparc/elf/configure: Generate.

	* sysdeps/sparc/sparc32/elf/configure.in: Delete WDISP22 check.
	* sysdeps/sparc/sparc32/elf/configure: Regenerate.
	* sysdeps/sparc/sparc64/elf/configure.in: Likewise.
	* sysdeps/sparc/sparc64/elf/configure: Regenerate.
	* config.h.in (BROKEN_SPARC_WDISP22): Remove.

2012-02-21  Joseph Myers  <joseph@codesourcery.com>

	* manual/install.texi: Do not mention specific glibc version
	numbers.
	* manual/libc.texinfo (VERSION, UPDATED): Update.
	(@copying): Use @copyright{} and range of years.

2012-02-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13695]
	* csu/Makefile (distribute): Remove initfini.c and defs.awk.
	[crti.S not in sysdirs] (generated): Do not append.
	[crti.S not in sysdirs] (omit-deps): Likewise.
	[crti.S not in sysdirs] ($(crtstuff:%=$(objpfx)%.o)): Remove rule.
	[crti.S not in sysdirs] ($(objpfx)initfini.s): Likewise.
	[crti.S not in sysdirs] ($(objpfx)crti.S): Likewise.
	[crti.S not in sysdirs] ($(objpfx)crtn.S): Likewise.
	[crti.S not in sysdirs] ($(patsubst %,$(objpfx)crt%.o,i n)):
	Likewise.
	[crti.S not in sysdirs] ($(objpfx)defs.h): Likewise.
	[crti.S not in sysdirs] (CFLAGS-initfini.s): Remove variable.
	[crti.S not in sysdirs] (initfini.c): Remove vpath directive.
	* csu/defs.awk: Remove file.
	* sysdeps/generic/initfini.c: Likewise.
	* sysdeps/powerpc/powerpc32/Makefile (CFLAGS-initfini.s): Remove
	variable.
	* sysdeps/powerpc/powerpc64/Makefile (CFLAGS-initfini.s):
	Likewise.

2012-02-20  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/bits/epoll.h: New file.
	* sysdeps/unix/sysv/linux/sparc/bits/epoll.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/epoll.h: Likewise.