@@ -45,3 +45,56 @@ rm -f conftest*])
 if test $libc_cv_sparc_tls = no; then
   AC_MSG_ERROR([the assembler must support TLS])
 fi
+
+# Check for GOTDATA relocation support in assembler and linker.
+AC_CACHE_CHECK(for sparc binutils GOTDATA reloc support, libc_cv_sparc_gotdata, [dnl
+changequote(,)dnl
+cat > conftest.S <<\EOF
+	.data
+	.globl	data
+data:	.word	0
+	.text
+	.globl	foo
+foo:	sethi	%gdop_hix22(data), %g1
+	xor	%g1, %gdop_lox10(data), %g1
+#ifdef __arch64__
+	ldx	[%l7 + %g1], %g1, %gdop(data)
+#else
+	ld	[%l7 + %g1], %g1, %gdop(data)
+#endif
+EOF
+changequote([,])dnl
+dnl
+if AC_TRY_COMMAND(${CC-cc} -c $CFLAGS conftest.S 1>&AS_MESSAGE_LOG_FD); then
+  libc_cv_sparc_gotdata=yes
+else
+  libc_cv_sparc_gotdata=no
+fi
+rm -f conftest*])
+if test $libc_cv_sparc_gotdata = yes; then
+  AC_DEFINE(HAVE_BINUTILS_GOTDATA)
+fi
+
+# Check for a GCC emitting GOTDATA relocations.
+AC_CACHE_CHECK(for sparc gcc GOTDATA reloc support, libc_cv_sparc_gcc_gotdata, [dnl
+changequote(,)dnl
+cat > conftest.c <<\EOF
+int data;
+int foo(void)
+{
+	return data;
+}
+EOF
+changequote([,])dnl
+dnl
+libc_cv_sparc_gcc_gotdata=no
+if AC_TRY_COMMAND(${CC-cc} -S $CFLAGS -O2 -fPIC conftest.c 1>&AS_MESSAGE_LOG_FD); then
+  if grep -q 'gdop_hix22' conftest.s \
+     && grep -q 'gdop_lox10' conftest.s; then
+    libc_cv_sparc_gcc_gotdata=yes
+  fi
+fi
+rm -f conftest*])
+if test $libc_cv_sparc_gcc_gotdata = yes; then
+  AC_DEFINE(HAVE_GCC_GOTDATA)
+fi
